# sdl-pong

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  ball.c  ball.h  event_handler.c  event_handler.h  game.c  game.h  main.c  player.c  player.h
